# rust-pdk

./: .gitignore  Cargo.toml  Makefile  README.md  count_vowels.wasm
.github/: CODEOWNERS
.github/actions/libextism/: action.yml
.github/workflows/: ci.yml  release.yml
derive/: Cargo.toml
derive/src/: lib.rs
examples/: count_vowels.rs  host_function.rs  host_function_host.rs  host_function_safe.rs  http.rs  http_headers.rs  mandelbrot.rs  reflect.rs  sum.rs
src/: bindings.rs  config.rs  error.rs  extism.rs  from_bytes.rs  host.rs  http.rs  input.rs  lib.rs  logging.rs  macros.rs  memory.rs  output.rs  pointer.rs  to_memory.rs  var.rs  vars.rs
test/: code.wasm  host_function.wasm  host_function_host.wasm  host_function_safe.wasm  http.wasm  http_headers.wasm
