[package]
name = "extism-pdk"
version = "1.3.0"
edition = "2021"
authors = ["The Extism Authors", "oss@extism.org"]
license = "BSD-3-Clause"
homepage = "https://extism.org"
repository = "https://github.com/extism/rust-pdk"
description = "Extism Plug-in Development Kit (PDK) for Rust"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
extism-pdk-derive = { path = "./derive", version = "1.3.0" }
extism-manifest = { version = "1.2.0", optional = true }
extism-convert = { version = "1.2.0", features = ["extism-pdk-path"] }
base64 = "0.22.1"

[features]
default = ["http", "msgpack"]
http = ["extism-manifest"]
msgpack = ["extism-convert/msgpack"]
protobuf = ["extism-convert/protobuf"]

[workspace]
members = [
  ".",
  "derive"
]
